Noisy_DQN results

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .idea/vcs.xml
 /lr_gamma_exp/plots/
 /DQN/.ipynb_checkpoints/
+standard/trace/trace_eval.txt
+standard/trace/trace_train.txt
+standard/trace/trace_eval.txt
+standard/trace/trace_train.txt
