--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ standard/trace/trace_eval.txt
 standard/trace/trace_train.txt
 standard/trace/trace_eval.txt
 standard/trace/trace_train.txt
+standard/trace/trace_eval.txt
+standard/trace/trace_train.txt
