--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ standard/trace/trace_eval.txt
 standard/trace/trace_train.txt
 standard/trace/trace_eval.txt
 standard/trace/trace_train.txt
+standard/trace/trace_eval.txt
